# ot-harjoitustyo

./: .env  .env.test  .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py
data/: test-database.sqlite
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testaus.md  tyoaikakirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/: maksukortti.py
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: monopoli-uml-mermaid.md  sekvenssikaavio-uml-mermaid.md
src/: config.py  index.py  initialize_database.py
src/entities/: age_group.py  difficulty.py  move.py  style.py  user.py
src/repositories/: moves_repository.py  user_repository.py
src/services/: moves_service.py
src/tests/: moves_repository_test.py  moves_service_test.py  user_repository_test.py
src/ui/: abstract_create_move.py  create_move_view.py  create_user_view.py  edit_move_view.py  login_view.py  moves_view.py  show_move_view.py  ui.py
