[project]
name = "ot-harjoitustyo"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "python-dotenv (>=1.2.1,<2.0.0)",
    "invoke (>=2.2.1,<3.0.0)",
    "caput (>=1.1,<2.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "coverage (>=7.11.0,<8.0.0)",
    "pytest-dotenv (>=0.5.2,<0.6.0)",
    "pylint (>=4.0.3,<5.0.0)"
]
